# target-duckdb

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  sample_config.json  setup.py
.github/workflows/: ci.yml  pythonpublish.yml
target_duckdb/: __init__.py  db_sync.py  logger.py
tests/integration/: test_target_duckdb.py  utils.py
tests/integration/resources/: messages-with-invalid-records.json  messages-with-nested-schema.json
tests/unit/: test_db_sync.py  test_target_duckdb.py  test_target_postgres.py
